Some extra message endpoints and fresh info
